--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,18 +22,19 @@ jobs:
 
     - name: Create control file
       run: |
+        VERSION=${{ github.ref_name#v }}
         echo "Package: fusionpdf" > debian/DEBIAN/control
-        echo "Version: ${{ github.ref_name }}" >> debian/DEBIAN/control
+        echo "Version: $VERSION" >> debian/DEBIAN/control
         echo "Architecture: all" >> debian/DEBIAN/control
         echo "Depends: imagemagick, poppler-utils" >> debian/DEBIAN/control
         echo "Description: A lightweight CLI tool to blend and overlay two PDFs." >> debian/DEBIAN/control
 
     - name: Build Debian package
-      run: dpkg-deb --build debian fusionpdf_${{ github.ref_name }}.deb
+      run: dpkg-deb --build debian fusionpdf_${{ github.ref_name#v }}_all.deb
 
     - name: Upload Debian package to release
       uses: actions/upload-release-asset@v1
       with:
-        asset_path: ./fusionpdf_${{ github.ref_name }}.deb
-        asset_name: fusionpdf_${{ github.ref_name }}.deb
+        asset_path: ./fusionpdf_${{ github.ref_name#v }}_all.deb
+        asset_name: fusionpdf_${{ github.ref_name#v }}_all.deb
         content_type: application/octet-stream
