update github action - debug

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,9 @@ jobs:
         VERSION=${VERSION#v}
         echo "VERSION=$VERSION" >> $GITHUB_ENV
 
+    - name: Debug version
+      run: echo "Version is $VERSION"
+
     - name: Set up packaging directory
       run: |
         mkdir -p debian/DEBIAN
@@ -36,6 +39,9 @@ jobs:
 
     - name: Build Debian package
       run: dpkg-deb --build debian fusionpdf_${VERSION}_all.deb
+
+    - name: List files
+      run: ls -la
 
     - name: Upload Debian package to release
       uses: actions/upload-release-asset@v1
